# LinuxPad-

./: .gitignore
LinuxPad++/: .gitignore  FEATURES.txt  README.md  index.html  package-lock.json  package.json  tailwind.config.js
LinuxPad++/src/: App.tsx  constants.ts  index.css
LinuxPad++/src-tauri/: Cargo.toml  tauri.conf.json
LinuxPad++/src-tauri/capabilities/: default.json
LinuxPad++/src-tauri/icons/: 128x128.rgba
LinuxPad++/src-tauri/src/: lib.rs  main.rs
LinuxPad++/src-tauri/src/commands/: file_ops.rs  file_watcher.rs  mod.rs
LinuxPad++/src/CreadorDiagramas/: DiagramEditor.tsx  DiagramToolbar.tsx  LabeledEdge.tsx  PropertiesPanel.tsx  exporters.ts  types.ts
LinuxPad++/src/CreadorDiagramas/nodes/: AnnotationNode.tsx  DatabaseNode.tsx  DecisionNode.tsx  DelayNode.tsx  DirectAccessStorageNode.tsx  DisplayNode.tsx  DocumentNode.tsx  IONode.tsx  InternalStorageNode.tsx  ManualInputNode.tsx  ManualOperationNode.tsx  MultiDocumentNode.tsx  OffPageConnectorNode.tsx  PageConnectorNode.tsx  PreparationNode.tsx  ProcessNode.tsx  ReferenceNode.tsx  SequentialDataNode.tsx  (+4 more)
LinuxPad++/src/components/: ChatPanel.tsx  CommandPalette.tsx  Editor.tsx  ErrorBoundary.tsx  FindReplace.tsx  InfoModal.tsx  Sidebar.tsx  StatusBar.tsx  TabBar.tsx  ToolbarBtn.tsx
LinuxPad++/src/hooks/: useFileWatcher.ts  useKeyboardShortcuts.ts
LinuxPad++/src/i18n/: index.ts  translations.ts
LinuxPad++/src/services/: fileService.ts
LinuxPad++/src/stores/: editorStore.ts
LinuxPad++/src/types/: chat.ts  index.ts
LinuxPad++/src/utils/: editorBridge.ts  formatter.ts
