[package]
name = "linux-pad"
version = "0.1.0"
description = "A modern Notepad++ clone for Linux"
authors = []
edition = "2021"

[lib]
name = "linux_pad_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri        = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell  = "2"
serde        = { version = "1", features = ["derive"] }
tokio        = { version = "1", features = ["rt-multi-thread", "io-util", "time", "sync"] }
notify       = "6"
dirs         = "5"
log          = "0.4"
env_logger   = "0.11"

[features]
custom-protocol = ["tauri/custom-protocol"]
